--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -15,7 +15,7 @@ trusted_ip: 127.0.0.1
 trusted_ip_2: 127.0.0.1
 
 # recorder
-postgres_url: postgres://000:000@000.000.000:000/homeassistant
+recorder_db_url: mysql://xxx:xxx@0.0.0.0:0000/homeassistant?charset=utf8
 
 # netatmo
 netatmo_api_key: 00000000000000000000
@@ -99,3 +99,23 @@ microsoft_bing_speech_api_key: XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 
 # Google Hangouts Conversations
 hangouts_conversationid_1: XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+
+# Webhooks
+webhook_leaving_home: 000
+webhook_sleep: 001
+webhook_gaming: 002
+webhook_bed_youtube: 003
+webhook_tv: 004
+webhook_phone_status: 005
+webhook_lock_unlock: 006
+webhook_lock_lock: 007
+
+# Nuki Smart Lock
+nuki_host: 127.0.0.1
+nuki_token: xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
+
+# Dyson
+dyson_username: xxxxxxxx@xxxxxx.xxx
+dyson_password: xxxxxxxxxxxxxxxx
+dyson_pure_serial: xxx-xx-xxxxxxx
+dyson_pure_ip: 127.0.0.1
