--- a/scripts/scenes/leaving_home.yaml
+++ b/scripts/scenes/leaving_home.yaml
@@ -37,3 +37,7 @@ leaving_home:
     - service: remote.turn_off
       data:
         entity_id: remote.harmony_hub
+    - service: lock.NUKI_LOCK_N_GO
+      data:
+        entity_id: lock.home
+        unlatch: false
