--- a/ui-lovelace.yaml
+++ b/ui-lovelace.yaml
@@ -1,12 +1,14 @@
 resources:
-  - url: /local/custom_ui/weather-card.js
-    type: js
-  - url: /local/custom_ui/gauge-card/gauge-card.js?v=5
-    type: js
+  # - url: /local/custom_ui/weather-card.js
+  #   type: js
+  # - url: /local/custom_ui/gauge-card/gauge-card.js?v=5
+  #   type: js
   - url: /local/custom_ui/bignumber-card/bignumber-card.js?v=1
     type: js
   - url: /local/custom_ui/thermostat-card/thermostat-card.js?v=1
     type: module
+  # - url: /local/custom_ui/mini-graph-card/mini-graph-card.js?v=0.0.1
+  #   type: module
 
 title: Home
 views:
@@ -18,7 +20,7 @@ views:
     # The cards to show on this view.
     cards:
       - type: glance
-        column_width: calc(100% / 3)
+        column_width: calc(100% / 4)
         show_state: false
         entities:
           - entity: script.leaving_home
@@ -33,19 +35,22 @@ views:
             name: Bedtime
             tap_action: toggle
             icon: mdi:laptop-windows
+          - entity: lock.home
+            name: Front Door
+            tap_action: toggle
       - type: entities
         title: Livingroom
         entities:
           - entity: light.living_room_ceiling_lamp
-            name: Ceiling Lamp
-          - entity: light.living_room_couch
-            name: Couch Lamp
+            name: Ceiling
           - entity: light.living_room_under_couch
-            name: Under Couch Lights
+            name: Under Couch
           - entity: light.tv_light_bulb
             name: TV Background Lamp
           - entity: light.computer_lamp_bulb
             name: Computer Lamp
+          - entity: light.living_room_corner_lamp
+            name: Corner Lamp
           - entity: light.livingroom_plant
             name: Plant Lights
           # - switch.ikea_planter
@@ -57,6 +62,8 @@ views:
           # - media_player.kd55x8505c
           - entity: climate.thermostat
             name: Thermostat
+          - entity: climate.living_room
+            name: Dyson Pure Hot + Cool
           - entity: sensor.livingroom_temperature_couch
             name: Temperature Couch
           - sensor.mystrom_computer
@@ -66,16 +73,20 @@ views:
       - type: entities
         title: Bedroom
         entities:
-          - entity: light.bedroom_main
-            name: Main Lights
           - entity: light.bedroom_nightstand
-            name: Nighstand Lamp
+            name: Nighstand
           - entity: light.bedroom_2
-            name: Ceiling Lamp
+            name: Ceiling
           - entity: light.bedroom_4
             name: Bed Lights
+          - entity: light.bedroom_corners
+            name: Corner Lamps
           - entity: switch.bedroom_fan
             name: Fan
+          # - entity: sensor.hx711_bed_sensor
+          #   name: Bed Sensor RAW
+          # - entity: sensor.bed_sensor_kg
+          #   name: Bed Sensor KG
           # - switch.bedroom_alarmclock
           - entity: sensor.netatmo_bedroom_temperature
             name: Temperature
@@ -94,8 +105,8 @@ views:
             name: Sink Lamp
           - entity: light.kitchen_1
             name: Table Lamp
-          - entity: switch.ikea_planter
-            name: IKEA Planter
+          - entity: lock.home
+            name: Front Door Lock
           - entity: sensor.kitchen_temperature
             name: Temperature
           - entity: sensor.kitchenthermometer_humidity
@@ -107,7 +118,8 @@ views:
         entities:
           - entity: light.office_ceiling
             name: Ceiling Lamp
-          - sensor.mystrom_server
+          - entity: switch.ikea_planter
+            name: IKEA Planter
           - sensor.netatmo_office_temperature
           - sensor.netatmo_office_humidity
           - sensor.netatmo_office_co2
@@ -140,6 +152,17 @@ views:
   - title: Apartment
     icon: mdi:home
     cards:
+      - type: entities
+        entities:
+          - input_boolean.holidays
+      - type: entities
+        entities:
+          - fan.living_room
+          - climate.living_room
+          - sensor.living_room_aqi
+          - sensor.living_room_dust
+          - sensor.living_room_filter_life
+          - sensor.living_room_humidity
       - type: vertical-stack
         cards:
           - type: entities
@@ -160,7 +183,10 @@ views:
           - type: entities
             title: Presence Detection
             entities:
-              - device_tracker.steff_phone_pixel
+              # - device_tracker.steff_phone_pixel
+              # - device_tracker.fa79v1a07669
+              - device_tracker.b02a43fcbe53
+              - device_tracker.88px01wkd
       - type: horizontal-stack
         cards:
           - type: custom:thermostat-card
@@ -206,14 +232,21 @@ views:
   - title: Weather
     icon: mdi:weather-partlycloudy
     cards:
-      - type: "custom:weather-card"
-        entity_weather: weather.weather_oberried
-        entity_sun: sun.sun
-      - type: custom:gauge-card
-        title: Humidity
-        entity: sensor.netatmo_outdoormodule_humidity
-        min: 0
-        max: 100
+      # - type: "custom:weather-card"
+      #   entity_weather: weather.weather_oberried
+      #   entity_sun: sun.sun
+      - type: horizontal-stack
+        cards:
+          - type: gauge
+            title: Lux
+            entity: sensor.tsl2561_ambient_light
+            min: 0
+            max: 90000
+          - type: gauge
+            title: Humidity
+            entity: sensor.netatmo_outdoormodule_humidity
+            min: 0
+            max: 100
       - type: horizontal-stack
         cards:
           - type: custom:bignumber-card
@@ -246,54 +279,116 @@ views:
             severity:
               - value: 200
                 style: '#0288D1'
-  - title: Webcams
-    icon: mdi:panorama
-    cards:
-      - type: picture-entity
-        title: Axalp 1900m
-        entity: camera.webcam_axalp
-        camera_image: camera.webcam_axalp
-        show_state: false
-      - type: horizontal-stack
-        cards:
-          - type: picture-entity
-            title: Axalp 1500m
-            entity: camera.webcam_axalp_2
-            camera_image: camera.webcam_axalp_2
-            show_state: false
-          - type: picture-entity
-            title: Brienz
-            entity: camera.webcam_brienz
-            camera_image: camera.webcam_brienz
-            show_state: false
       - type: vertical-stack
         cards:
+          - type: glance
+            title: Aare Brienzwiler
+            column_width: 25%
+            entities:
+              - entity: sensor.aare_brienzwiler_discharge
+                name: Discharge
+              - entity: sensor.aare_brienzwiler_temperature
+                name: Temperature
+              - entity: sensor.aare_brienzwiler_waterlevel
+                name: Waterlevel
+              - entity: sensor.aare_brienzwiler_danger_level
+                name: Danger Level
+          - type: glance
+            title: Aare Ringgenberg
+            column_width: 25%
+            entities:
+              - entity: sensor.aare_ringgenberg_discharge
+                name: Discharge
+              - entity: sensor.aare_ringgenberg_temperature
+                name: Temperature
+              - entity: sensor.aare_ringgenberg_waterlevel
+                name: Waterlevel
+              - entity: sensor.aare_ringgenberg_danger_level
+                name: Danger Level
+          - type: glance
+            title: Aare Thun
+            column_width: 25%
+            entities:
+              - entity: sensor.aare_thun_discharge
+                name: Discharge
+              - entity: sensor.aare_thun_temperature
+                name: Temperature
+              - entity: sensor.aare_thun_waterlevel
+                name: Waterlevel
+              - entity: sensor.aare_thun_danger_level
+                name: Danger Level
+          - type: glance
+            title: Aare Bern
+            column_width: 25%
+            entities:
+              - entity: sensor.aare_bern_discharge
+                name: Discharge
+              - entity: sensor.aare_bern_temperature
+                name: Temperature
+              - entity: sensor.aare_bern_waterlevel
+                name: Waterlevel
+              - entity: sensor.aare_bern_danger_level
+                name: Danger Level
+  - title: Webcams
+    icon: mdi:panorama
+    panel: true
+    cards:
+      - type: vertical-stack
+        cards:
+          - type: horizontal-stack
+            cards:
+              - type: picture-entity
+                name: Windegg
+                entity: camera.webcam_axalp
+                camera_image: camera.webcam_axalp
+                show_state: false
+              - type: vertical-stack
+                cards:
+                  - type: horizontal-stack
+                    cards:
+                      - type: picture-entity
+                        name: Axalp
+                        entity: camera.webcam_axalp_2
+                        camera_image: camera.webcam_axalp_2
+                        show_state: false
+                      - type: picture-entity
+                        name: Brienz
+                        entity: camera.webcam_brienz
+                        camera_image: camera.webcam_brienz
+                        show_state: false
+                  - type: horizontal-stack
+                    cards:
+                      - type: picture-entity
+                        name: Bönigen
+                        entity: camera.webcam_bonigen
+                        camera_image: camera.webcam_bonigen
+                        show_state: false
+                      - type: picture-entity
+                        name: Brienz
+                        entity: camera.webcam_brienz_2
+                        camera_image: camera.webcam_brienz_2
+                        show_state: false
           - type: picture-entity
-            title: Rothorn
+            name: Rothorn
             entity: camera.webcam_rothorn
             camera_image: camera.webcam_rothorn
-            show_state: false
-          - type: picture-entity
-            title: Bönigen
-            entity: camera.webcam_bonigen
-            camera_image: camera.webcam_bonigen
             show_state: false
   - title: System
     icon: mdi:flash
     cards:
       - type: horizontal-stack
         cards:
-          - type: custom:gauge-card
-            title: Server
-            entity: sensor.mystrom_server
-            min: 0
-            max: 350
-            scale: "35px"
-            severity:
-              red: 250
-              green: 0
-              amber: 150
-          - type: custom:gauge-card
+          # - type: gauge
+          #   title: Server
+          #   entity: sensor.mystrom_server
+          #   min: 0
+          #   max: 350
+          #   scale: "35px"
+          #   severity:
+          #     red: 250
+          #     green: 0
+          #     amber: 150
+          - type: gauge
             title: PC
             entity: sensor.mystrom_computer
             min: 0
@@ -303,7 +398,7 @@ views:
               red: 500
               green: 0
               amber: 250
-          - type: custom:gauge-card
+          - type: gauge
             title: TV
             entity: sensor.mystrom_tv
             min: 0
@@ -316,6 +411,10 @@ views:
   - title: TESTING
     icon: mdi:test-tube
     cards:
+      - type: sensor
+        name: Lux
+        entity: sensor.tsl2561_ambient_light
+        height: 100
       - type: picture-elements
         image: /local/image_status/livingroom/tv/svg/background.png
         elements:
