--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -119,3 +119,8 @@ dyson_username: xxxxxxxx@xxxxxx.xxx
 dyson_password: xxxxxxxxxxxxxxxx
 dyson_pure_serial: xxx-xx-xxxxxxx
 dyson_pure_ip: 127.0.0.1
+
+# Traccar
+traccar_username: xxxxxxxxxxxxxx
+traccar_password: xxxxxxxxxxxxxxxxxxxxxxxx
+traccar_host: 127.0.0.1
