--- a/travis_secrets.yaml
+++ b/travis_secrets.yaml
@@ -124,3 +124,7 @@ dyson_pure_ip: 127.0.0.1
 traccar_username: xxxxxxxxxxxxxx
 traccar_password: xxxxxxxxxxxxxxxxxxxxxxxx
 traccar_host: 127.0.0.1
+
+# Persons
+steff_id: 0000
+steff_user_id: 000000000000000000000000
