--- a/scripts/scenes/leaving_home.yaml
+++ b/scripts/scenes/leaving_home.yaml
@@ -37,7 +37,7 @@ leaving_home:
     - service: remote.turn_off
       data:
         entity_id: remote.harmony_hub
-    - service: lock.NUKI_LOCK_N_GO
+    - service: lock.nuki_lock_n_go
       data:
         entity_id: lock.home
         unlatch: false
