--- a/light/bedroom.yaml
+++ b/light/bedroom.yaml
@@ -6,6 +6,8 @@
     - light.bedroom_3
     - light.bedroom_4
     - light.bedroom_nightstand
+    - light.bedroom_corner_right
+    - light.bedroom_corner_left
 
 - platform: group
   name: Bedroom YouTube
