added new utility_meter sensor

--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,5 @@ packages.disabled
 www/people
 *.mp3
 automation/bedroom/overslept.yaml
+www/backgrounds/wallhaven-1045.jpg
+www/backgrounds/wallhaven-172249.jpg
