reverted back to more readable theme

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ www/people
 automation/bedroom/overslept.yaml
 www/backgrounds/wallhaven-1045.jpg
 www/backgrounds/wallhaven-172249.jpg
+www/backgrounds/wallhaven-161989.jpg
